Feature: added caching of feed using redis